--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@ background-color: #f1f1f1;">@YPM</p>
 background-color: #f1f1f1;
 text-align:center;
 padding:40px;">
-<img src = 'D:/%E6%A1%8C%E9%9D%A2/%E5%A4%A9%E6%96%87%E7%9A%84%E4%B8%9C%E8%A5%BF/%E5%A4%A9%E6%96%87/1.bmp' alt="当你看到这段话的时候，证明土星图片显示失败"  width="640px" height="480px"> 
+<img src = 'https://pic.imgdb.cn/item/66d0861fd9c307b7e9533f2b.jpg' alt="当你看到这段话的时候，证明土星图片显示失败"  width="640px" height="480px"> 
 </div>
