--- a/index.html
+++ b/index.html
@@ -12,3 +12,9 @@ text-align:center;
 padding:40px;">
 <img src = 'https://pic.imgdb.cn/item/66d0861fd9c307b7e9533f2b.jpg' alt="当你看到这段话的时候，证明土星图片显示失败"  width="640px" height="480px"> 
 </div>
+</div>
+<p style="
+text-align:center;
+font-size:20px;
+background-color: #f1f1f1;">@版权声明</p>
+</div>
