--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <h1 style="
 background-color: #f1f1f1;
 text-align:center;
-">天文</h1>
+padding:20px;"
+>天文</h1>
 <p style="
 text-align:center;
 font-size:20px;
-background-color: #f1f1f1;">@YPM</p>
+background-color: #f1f1f1;
+padding:20px;"
+>@YPM</p>
 <div style="
 background-color: #f1f1f1;
 text-align:center;
 padding:40px;">
-<img src = "https://pic.imgdb.cn/item/66d0861fd9c307b7e9533f2b.jpg" alt="1.bmp" alt="当你看到这段话的时候，证明土星图片显示失败"  width="640px" height="480px"> 
+<img src = "https://pic.imgdb.cn/item/66d0861fd9c307b7e9533f2b.jpg" alt="当你看到这段话的时候，证明土星图片显示失败" *width="640px" height="480px"> 
 </div>
 <div>
 <p style="
 text-align:center;
 font-size:20px;
-background-color: #FFE4C4;">@版权声明</p>
+background-color: #FFE4C4;
+padding:20px;"
+>@版权声明</p>
 </div>
