--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ padding:40px;">
 text-align:center;
 font-size:20px;
 background-color: #FFE4C4;
-padding:20px;"
+padding:20px;
+"class="flex-item;"
 >@版权声明</p>
-box-shadow: 0px 20px 40px 20px #0ff;
 </div>
