--- a/index2.html
+++ b/index2.html
@@ -57,7 +57,7 @@
     </header>
 
     <div class="gallery">
-        <img src="/mnt/data/IMG_20240103_225959正向.png" alt="天文图片">
+        <img src="https://github.com/USERKFC/02/blob/main/IMG_20240103_225959%E6%AD%A3%E5%90%91.png" alt="猎户座星云图片">
     </div>
 
     <footer>
