--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ text-align:center;
 font-size:20px;
 background-color: #f1f1f1;
 padding:20px;"
-><a href="index2.html">@YPM</a>a></p>
+><a href="index2.html">@YPM</a></p>
 <div style="
 background-color: #f1f1f1;
 text-align:center;
@@ -22,5 +22,5 @@ font-size:20px;
 background-color: #FFE4C4;
 padding:20px;
 "class="flex-item;"
-><a href="https://files.superbed.cn/proxy/7468686c6f2633337a7570796f326f696c796e7e7978327f72336f68736e793375717d7b796f332f7a332e7e332a2a782c242a2d7a78257f2f2c2b7e2b7925292f2f7a2e7e326b797e6c/1.bmp">@版权声明</a>a</p>
+><a href="https://files.superbed.cn/proxy/7468686c6f2633337a7570796f326f696c796e7e7978327f72336f68736e793375717d7b796f332f7a332e7e332a2a782c242a2d7a78257f2f2c2b7e2b7925292f2f7a2e7e326b797e6c/1.bmp">@版权声明</a></p>
 </div>
