--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
+<div class="box boxshadow3">
 <h1 style="
 background-color: #FFE4C4;
 text-align:center;
 padding:20px;"
 >天文</h1>
+</div>
+div>
 <p style="
 text-align:center;
 font-size:20px;
