--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
-<div class="box boxshadow3;
-  flex-item;">
-<h1 style="
-background-color: #FFE4C4;
-text-align:center;
-padding:20px;"
->天文</h1>
-</div>
-<p style="
-text-align:center;
-font-size:20px;
-background-color: #f1f1f1;
-padding:20px;"
-><a href="index2.html">@YPM</a></p>
-<div style="
-background-color: #f1f1f1;
-text-align:center;
-padding:40px;">
-<img src = "https://pic.imgdb.cn/item/66d0861fd9c307b7e9533f2b.jpg" alt="当你看到这段话的时候，证明土星图片显示失败" *width="640px" height="480px"> 
-</div>
-<div>
-<p style="
-text-align:center;
-font-size:20px;
-background-color: #FFE4C4;
-padding:20px;
-"class="flex-item;"
-><a href="https://files.superbed.cn/proxy/7468686c6f2633337a7570796f326f696c796e7e7978327f72336f68736e793375717d7b796f332f7a332e7e332a2a782c242a2d7a78257f2f2c2b7e2b7925292f2f7a2e7e326b797e6c/1.bmp">@版权声明</a></p>
-</div>
-<!--<p>就你偷看我代码是吧，其实没啥好看的</p>-->
+<!DOCTYPE html>
+<html lang="zh-CN">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>叶培淼</title>
+    <style></style>
+  </head>
+  <body>
+    <h1 style="background-color: #f1f1f1; text-align: center; padding: 40px;font-size: 60px;">
+      天文
+    </h1>
+    <div
+      style="
+        background-color: #00c3ff;
+        text-align: center;
+        padding: 40px;
+      "
+    >
+      <p style="font-size: 20px;"><a href="1.html">@YPM</a></p>
+      <img
+        src="D:/%E6%A1%8C%E9%9D%A2/%E5%A4%A9%E6%96%87%E7%9A%84%E4%B8%9C%E8%A5%BF/%E5%A4%A9%E6%96%87/1.bmp"
+        alt="哈哈哈"
+        width="640px"
+        height="480px"
+      />
+    </div>
+        <p style="text-align: center; padding: 40px;font-size: 20px;color: #ff0000; background-color: #f1f1f1;"><a href="https://pic.imgdb.cn/item/66d0861fd9c307b7e9533f2b.jpg">@版权声明</a></p>
+    </div>
+  </body>
+</html>
