--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         padding: 40px;
       "
     >
-      <p style="font-size: 20px;"><a href="1.html">@YPM</a></p>
+      <p style="font-size: 20px;"><a href="index2.html">@YPM</a></p>
       <img
         src="D:/%E6%A1%8C%E9%9D%A2/%E5%A4%A9%E6%96%87%E7%9A%84%E4%B8%9C%E8%A5%BF/%E5%A4%A9%E6%96%87/1.bmp"
         alt="哈哈哈"
