--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     >
       <p style="font-size: 20px;"><a href="index2.html">@YPM</a></p>
       <img
-        src="D:/%E6%A1%8C%E9%9D%A2/%E5%A4%A9%E6%96%87%E7%9A%84%E4%B8%9C%E8%A5%BF/%E5%A4%A9%E6%96%87/1.bmp"
+        src="https://s2.loli.net/2024/09/03/BMfWnqcvLCAozpa.png"
         alt="哈哈哈"
         width="640px"
         height="480px"
