--- a/index2.html
+++ b/index2.html
@@ -57,7 +57,7 @@
     </header>
 
     <div class="gallery">
-        <img src="https://github.com/USERKFC/02/IMG_20240103_225959%E6%AD%A3%E5%90%91.png" alt="猎户座星云图片，但是显示失败了">
+        <img src="https://github.com/USERKFC/02/lhz.png" alt="猎户座星云图片，但是显示失败了">
     </div>
 
     <footer>
