--- a/index2.html
+++ b/index2.html
@@ -57,7 +57,7 @@
     </header>
 
     <div class="gallery">
-        <img src="https://github.com/USERKFC/02/lhz.png" alt="猎户座星云图片，但是显示失败了">
+        <img src="https://s2.loli.net/2024/09/03/kMqaZFuVlDz6GBi.jpg" alt="猎户座星云图片，但是显示失败了">
     </div>
 
     <footer>
